fixed white space

--- a/css/layout.css
+++ b/css/layout.css
@@ -87,11 +87,6 @@ img {
 	margin-bottom: 10px;
 }
 
-/*white goes all the way to bottom of page*/
-html, body, .container {
-	height: 100%;
-}
-
 #title_container > p {
 	text-align: center;
 	font-size: 20px;
